charts/portfolio/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: acr-creds
      containers:
      - name: frontend
        image: jeremyscr.azurecr.io/portfolio:0.0.1
        ports:
        - containerPort: 3000
