charts/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: postgres-db-hl
  namespace: portfolio
  labels:
    app: postgres
spec:
  clusterIP: None # Headless
  selector:
    app: postgres
  ports:
    - port: 5432
      name: tcp-postgresql

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: portfolio
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: tcp-postgresql
