charts/portfolio/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio-frontend-route
  namespace: portfolio
spec:
  parentRefs:
  - name: prod-web
    namespace: envoy-gateway-system
  hostnames:
  - "hvd.jeremymr.dev"
  rules:
  - backendRefs:
    - name: frontend-service
      port: 80
